# MPI-SPIKE-SOLVER

./: CMakeLists.txt  CMakeLists.txt.bak  README.md
docs/: 一种并行求解有限元问题中大型带状线性方程组的方法（发明）0322改稿2(1)(1).docx
include/: MpiSpikeSolver.h
src/: enum.h  macro.h  util.cc  util.h
src/facAndSolve/: FacAndSolve.cc  RecursiveStage.cc  RecursiveStage1.cc  facandsolve.h
src/factorization/: FacUtils.cc  FactorizationStage.cc  factorization.h
src/solve/: SolveStage.cc  SolveUtils.cc  solve.h
test/: test_spike.cc
